[workspace]
exclude = ["errno-gen"]

[package]
name = "apple-errnos"
version = "0.1.1"
authors = ["shurizzle <shura1991@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A list of error numbers for apple"
keywords = ["syscall", "no_std", "apple", "errors", "errno"]
readme = "README.md"
repository = "https://github.com/shurizzle/apple-errnos"
homepage = "https://github.com/shurizzle/apple-errnos"
documentation = "https://docs.rs/apple-errnos"

[package.metadata]
msrv = "1.32.0"

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-apple-darwin"
targets = [
  "aarch64-apple-darwin",
  "arm64_32-apple-watchos",
  "armv7k-apple-watchos",
  "aarch64-apple-tvos",
]
cargo-args = ["-Z", "build-std"]

[[example]]
name = "list"
required-features = ["iter"]

[lib]
path = "src/lib.rs"

[features]
default = ["std"]
std = []
iter = []
